	* src/cnpyMod.cpp: Several corrections on file save:
	  - Correct saving on integer matrices and vectors by
	    testing for integer before testing for numeric (which is always true
	    for int as well)
	  - Convert integer object to int64_t and save as int64_t
	  - For good measure, properly specify template type when saving
	  - [So far untested] On big endian systems, convert before writing

2015-01-02  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp: Apply correction by Wush Wu to correct (if needed)
	for endianness before instantiating vectors when reading from file

2015-01-01  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp: Move byte-swap call off into helper functions

2014-12-31  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp: Correct call to byte swap for big endian systems

2014-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Edited Title: and Description:; bumped Date: and Version:

	* tests/loadFiles.R: Print results; remove test for [known] int support
	* tests/loadFiles.Rout.save: Updated as well

2014-12-01  Romain Francois  <romain@r-enthusiasts.com>

	* src/cnpyMod.cpp: Use const_iterator

2014-08-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/cnpyMod.cpp: Attempt to deal with big endian for int64 and double

2014-08-04  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppCNPy-intro.Rnw: Do not assume 'system("gzip ...")'
	  works because, y'a know, there is Windoze...

2014-04-10  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.2.3
	* inst/NEWS.Rd: Updated with release news

2014-04-09  Dirk Eddelbuettel  <edd@debian.org>

	* vignettes/RcppCNPy-intro.Rnw:
	  - Updated vignette to reflect integer support on all
	    platforms thanks to 'long long'
	  - Switched to font used in Rcpp vignettes
	  - Switched to vignette processing via highlight

	* man/RcppCNPy-package.Rd: Updated to reflect integer support

	* src/Makevars.win: Updated as well
